# nautilus_trader_rig

./: .gitignore  Cargo.toml  README.md  README_comparison.md  README_parity.md  collected_code_chunks.md  collected_code_chunks.txt  indicators.csv  parity.md
comparisons/: __init__.md  ama.md  amat.md  aroon.md  atr.md  bb.md  bias.md  bollinger_bands.md  candle_body.md  candle_direction.md  candle_size.md  candle_wick.md  cci.md  cmo.md  dc.md  dema.md  dm.md  donchian_channel.md  efficiency_ratio.md  ema.md  fuzzy.md  fuzzy_candlesticks.md  fuzzy_enum.md  hma.md  imbalance.md  indicator.md  kc.md  keltner_channel.md  keltner_position.md  kp.md  kvo.md  lib.md  linear_regression.md  lr.md  ma_factory.md  macd.md  mod.md  moving_average.md  obv.md  pressure.md  (+17 more)
src/: main.rs  utils.rs
