[package]
name = "nautilus_trader_rig"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
git2 = "0.20.1"
rig-core = { version = "0.11", features = ["all"] }
serde = "1.0.219"
sqlite-vec = "0.1.6"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"], default-features = false }
zerocopy = "0.8.10"
chrono = "0.4"
rig-sqlite = "0.1.3"
dotenv = "0.15.0"
